--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "co-prompt": "^1.0.0",
     "commander": "^4.0.0",
     "express": "^4.17.1",
+    "inquirer": "^7.0.0",
     "node-fetch": "^2.6.0",
     "process": "^0.11.10",
     "request": "^2.88.0"
